--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,15 @@
   "description": "Brings back the old 'View Image' button on google image search results.",
   "manifest_version": 2,
   "name": "View Image Resurrected",
-  "version": "1.2",
+  "version": "1.3",
   "permissions": [
     "webRequest",
     "<all_urls>"
   ],
+  "icons": {
+    "48": "icons/icon-48.png",
+    "96": "icons/icon-96.png"
+  },
 
   "background": {
     "scripts": ["js/background.js"]
