--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "version": "1.3",
   "permissions": [
     "webRequest",
-    "<all_urls>"
+    "<all_urls>",
+    "storage"
   ],
   "icons": {
     "48": "icons/icon-48.png",
