--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
   "permissions": [
     "webRequest",
     "<all_urls>",
-    "storage"
+    "storage",
+    "downloads"
   ],
   "icons": {
     "48": "icons/icon-48.png",
