--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,13 @@
   "description": "Brings back the old 'View Image' button on google image search results.",
   "manifest_version": 2,
   "name": "View Image Resurrected",
-  "version": "1.3",
+  "version": "1.5",
   "permissions": [
     "webRequest",
     "<all_urls>",
     "storage",
-    "downloads"
+    "downloads",
+    "clipboardWrite"
   ],
   "icons": {
     "48": "icons/icon-48.png",
