--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,14 @@
 {
 
-  "description": "Brings back the old 'View Image' button on google image search results.",
+  "description": "Brings back the 'View Image' and 'Search by Image' options in google image search results, as well as adding copy and download options.",
   "manifest_version": 2,
   "name": "View Image Resurrected",
-  "version": "1.5",
+  "version": "1.6",
   "permissions": [
     "webRequest",
     "<all_urls>",
     "storage",
-    "downloads",
-    "clipboardWrite"
+    "downloads"
   ],
   "icons": {
     "48": "icons/icon-48.png",
